force-app/main/default/objects/CEP_ApiMethod__mdt/CEP_ApiMethod__mdt.object-meta.xml
<CustomObject>
    <description>An API method that is called from the API framework. In this entity it is defined the associated path, http method, input message template (using merge fields), mock output message and output deserializable apex class.</description>
    <label>CEP API Method</label>
    <pluralLabel>CEP API Methods</pluralLabel>
</CustomObject>