force-app/main/default/objects/CEP_ApiMethod__mdt/fields/ApiPath__c.field-meta.xml
<CustomField>
    <fullName>ApiPath__c</fullName>
    <label>API Path</label>
    <referenceTo>CEP_ApiPath__mdt</referenceTo>
    <relationshipLabel>API Methods</relationshipLabel>
    <relationshipName>ApiMethods</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>