force-app/main/default/objects/CEP_ApiMethod__mdt/fields/Input__c.field-meta.xml
<CustomField>
    <fullName>Input__c</fullName>
    <inlineHelpText>Merge field values use the syntax {!fieldName}.</inlineHelpText>
    <label>Input</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>