force-app/main/default/objects/CEP_ApiMethod__mdt/fields/MockOutput__c.field-meta.xml
<CustomField>
    <fullName>MockOutput__c</fullName>
    <label>Mock Output</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>