force-app/main/default/objects/CEP_ApiMethod__mdt/fields/OutputDeserializeClassName__c.field-meta.xml
<CustomField>
    <fullName>OutputDeserializeClassName__c</fullName>
    <label>Output Deserialize Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>