force-app/main/default/objects/CEP_ApiMethod__mdt/fields/SubPath__c.field-meta.xml
<CustomField>
    <fullName>SubPath__c</fullName>
    <inlineHelpText>Merge field values use the syntax {!fieldName}.</inlineHelpText>
    <label>Sub-Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>