force-app/main/default/objects/CEP_ApiMethod__mdt/fields/TimeoutOverride__c.field-meta.xml
<CustomField>
    <fullName>TimeoutOverride__c</fullName>
    <inlineHelpText>Override timeout (in seconds) for this method.</inlineHelpText>
    <label>Timeout Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>